ignore tmp files

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 **/.vagrant/*
 
 # Temporary files
-**/.tmp/*
+**/tmp/*
 
 # Log files (if you are creating logs in debug mode, uncomment this)
 *.log
