--- a/k8s/ansible/master-playbook.yaml
+++ b/k8s/ansible/master-playbook.yaml
@@ -106,9 +106,17 @@
     command: kubeadm token create --print-join-command
     register: join_command
 
+  - name: Create tmp directory if it does not exist
+    file:
+      path: "./tmp"
+      state: directory
+      mode: '0755'
+    become: false
+    delegate_to: localhost
+    
   - name: Copy join command to local file
     copy:
-      dest: "/tmp/join"
+      dest: "./tmp/join"
       content: "{{ join_command.stdout_lines[0] }}"
     become: false
     delegate_to: localhost
