--- a/k8s/ansible/node-playbook.yaml
+++ b/k8s/ansible/node-playbook.yaml
@@ -76,7 +76,7 @@
 
   - name: Copy the join command to server location
     copy:
-      src: "/tmp/join"
+      src: "./tmp/join"
       dest: /tmp/join-command.sh
       mode: 0777
     become: false
